Fix link visibility issues

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -12,13 +12,29 @@ $selected-color: rgb(179, 179, 179);
 }
 
 a {
-  text-decoration: none;
+  text-decoration: underline;
   font-weight: normal;
-  color: $text-color;
+  color: black;
 }
 
 a:hover {
+  font-weight: bold;
+}
+
+.title-link,
+.nav-link {
+  color: $text-color;
+  text-decoration: none;
+  font-weight: normal;
+}
+
+.nav-link:hover,
+.title-link:hover {
   color: black;
+}
+
+.title-link:hover {
+  font-weight: normal;
 }
 
 h1 {
